src/objects/cadmus_core__Actionable__c.object
<CustomObject>
    <fields>
        <fullName>MultiSelect_SourceField_API_Name__c</fullName>
        <label>MultiSelect SourceField API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiSelect_Source_DataSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MultiSelect Source DataSource</label>
        <referenceTo>cadmus_core__Data_Source__c</referenceTo>
        <relationshipLabel>Actionables (MultiSelect Source DataSource)</relationshipLabel>
        <relationshipName>Actionables5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MultiSelect_Source_Guid__c</fullName>
        <formula>MultiSelect_Source_DataSource__r.cadmus_core__CustomerDataSourceId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MultiSelect Source Guid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiSelect_Target_DataSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MultiSelect Target DataSource</label>
        <referenceTo>cadmus_core__Data_Source__c</referenceTo>
        <relationshipLabel>Actionables (MultiSelect Target DataSource)</relationshipLabel>
        <relationshipName>Actionables6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MultiSelect_Target_Guid__c</fullName>
        <formula>MultiSelect_Target_DataSource__r.cadmus_core__CustomerDataSourceId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MultiSelect Target Guid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Action_Name__c</fullName>
        <label>Action Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Action_Object__c</fullName>
        <label>Action Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Adobe_Sign_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who will receive this</inlineHelpText>
        <label>Recipient</label>
        <referenceTo>cadmus_core__Data_Source__c</referenceTo>
        <relationshipLabel>Actionables (Recipient)</relationshipLabel>
        <relationshipName>Actionables4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Adobe_Sign_Template_Id__c</fullName>
        <inlineHelpText>Adobe Sign template to use. Copy the identifier from the URL</inlineHelpText>
        <label>Template Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Class__c</fullName>
        <description>Class to run</description>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Doc_Config__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Doc Config</label>
        <referenceTo>cadmus_core__Doc_Config__c</referenceTo>
        <relationshipLabel>Actionables</relationshipLabel>
        <relationshipName>Actionables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cadmus_core__DocuSign_DataSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This links to the DataSource to use to get to the formula fiels that holds the parameter/querystring. Make sure the field is in the SOQL otherwise it will not be found.</inlineHelpText>
        <label>DocuSign DataSource</label>
        <referenceTo>cadmus_core__Data_Source__c</referenceTo>
        <relationshipLabel>Actionables (DocuSign DataSource)</relationshipLabel>
        <relationshipName>Actionables5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cadmus_core__DocuSign_Parameters_For_Url__c</fullName>
        <inlineHelpText>API name of the formula field that has the parameter- or querystring for DocuSign. The SourceId does not have to be added and the querystring should start with &apos;&amp;&apos;</inlineHelpText>
        <label>DocuSign Parameters For Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Email_Bcc_Address_Field__c</fullName>
        <label>Email Bcc Address Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Email_Bcc_Addresses__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Bcc Addresses</label>
        <referenceTo>cadmus_core__Data_Source__c</referenceTo>
        <relationshipLabel>Actionables (Email Bcc Addresses)</relationshipLabel>
        <relationshipName>Actionables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Email_Cc_Address_Field__c</fullName>
        <label>Email Cc Address Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Email_Cc_Addresses__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Cc Addresses</label>
        <referenceTo>cadmus_core__Data_Source__c</referenceTo>
        <relationshipLabel>Actionables (Email Cc Addresses)</relationshipLabel>
        <relationshipName>Actionables1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Email_Field_Bcc_Addresses_DataSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Field Bcc Addresses DataSource</label>
        <referenceTo>cadmus_core__Data_Source__c</referenceTo>
        <relationshipLabel>Actionables (Email Field Bcc Addresses DataSource)</relationshipLabel>
        <relationshipName>Email_Field_Bcc_Addresses_DataSource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Email_Field_Cc_Addresses_DataSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Field Cc Addresses DataSource</label>
        <referenceTo>cadmus_core__Data_Source__c</referenceTo>
        <relationshipLabel>Actionables (Email Field Cc Addresses DataSource)</relationshipLabel>
        <relationshipName>Email_Field_Cc_Addresses_DataSource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Email_Field_To_Addresses_DataSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Field To Addresses DataSource</label>
        <referenceTo>cadmus_core__Data_Source__c</referenceTo>
        <relationshipLabel>Actionables (Email Field To Addresses DataSource)</relationshipLabel>
        <relationshipName>Email_Field_To_Addresses_DataSource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Email_Hide_User_Signature__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If the User has a Signature setup in his &quot;My Email Settings&quot; this will be shown in the mail. If you do not want this, you can just check the checkbox</description>
        <inlineHelpText>If the User has a Signature setup in his &quot;My Email Settings&quot; this will be shown in the mail. If you do not want this, you can just check the checkbox</inlineHelpText>
        <label>Email Hide User Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Email_Target_Object_Field__c</fullName>
        <inlineHelpText>API name of the field to use from the Email Target Object DataSource. This field should be the Id of a User/Lead/Contact!
If left empty, it will assume that the DataSource returns a User/Lead/Contact record.
If the DataSource does not return a User/Lead/Contact record and this field is empty. The Email Target Object will be ignored if possible. If not possible to ignore, an error is thrown.</inlineHelpText>
        <label>Email Target Object Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Email_Target_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact or User that will receive the email</inlineHelpText>
        <label>Email Target Object</label>
        <referenceTo>cadmus_core__Data_Source__c</referenceTo>
        <relationshipLabel>Actionables (Email Target Object)</relationshipLabel>
        <relationshipName>Actionables2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Email_Template_Name__c</fullName>
        <inlineHelpText>The &quot;Template Unique Name&quot; of the Salesforce.com email template.</inlineHelpText>
        <label>Email Template Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Email_To_Address_Field__c</fullName>
        <label>Email To Address Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Email_To_Addresses__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email To Addresses</label>
        <referenceTo>cadmus_core__Data_Source__c</referenceTo>
        <relationshipLabel>Actionables (Email To Addresses)</relationshipLabel>
        <relationshipName>Actionables3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Flow_API_Name__c</fullName>
        <inlineHelpText>API Name of the Autolaunched Lightning Flow</inlineHelpText>
        <label>Flow API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Org_Wide_Email_Address__c</fullName>
        <inlineHelpText>Display name of the Org Wide Email Address
Leave empty to use the current user as sender</inlineHelpText>
        <label>Org Wide Email Address Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Pack__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pack</label>
        <referenceTo>cadmus_core__Pack__c</referenceTo>
        <relationshipLabel>Actionables</relationshipLabel>
        <relationshipName>Actionables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Reply_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This has to be a DataSource that selects a User, Contact or Lead. 
Leave empty to not use</inlineHelpText>
        <label>Reply To</label>
        <referenceTo>cadmus_core__Data_Source__c</referenceTo>
        <relationshipLabel>Actionables (Reply To)</relationshipLabel>
        <relationshipName>Actionables6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Static_Bcc_Email_Addresses__c</fullName>
        <label>Static Bcc Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Static_Cc_Email_Addresses__c</fullName>
        <label>Static Cc Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Static_To_Email_Addresses__c</fullName>
        <inlineHelpText>&quot;;&quot; seperated list of email address</inlineHelpText>
        <label>Static To Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__When__c</fullName>
        <description>When to execute this action. Before or after the document is generated</description>
        <label>When</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BEFORE</fullName>
                    <default>true</default>
                    <label>BEGIN</label>
                </value>
                <value>
                    <fullName>DATA_SOURCE</fullName>
                    <label>ON DATA SOURCE</label>
                </value>
                <value>
                    <fullName>BEFORE_BUT_AFTER_DATASOURCES</fullName>
                    <label>AFTER DATASOURCES</label>
                </value>
                <value>
                    <fullName>AFTER</fullName>
                    <label>AFTER GENERATION</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Actionable</label>
    <nameField>
        <label>Actionable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actionables</pluralLabel>
    <recordTypes>
        <fullName>MultiSelect_To_DataSource</fullName>
        <active>true</active>
        <description>Select a MultiSelect Picklist and get the values is a seperate LIST DataSource</description>
        <label>MultiSelect To DataSource</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__AdobeSign</fullName>
        <active>true</active>
        <description>Send document via AdobeSign</description>
        <label>AdobeSign</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__Auto_Email</fullName>
        <active>true</active>
        <description>Sends out your documents created by PDF Butler via mail. Uses a SFDC Template</description>
        <label>Auto Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__Auto_Email_for_Quick_Action</fullName>
        <active>true</active>
        <description>This actionable should be used with a Lightning Email Template. This action will open the Email Activity and prefill this with the Actionable data.</description>
        <label>Auto Email for Quick Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__DocuSign</fullName>
        <active>true</active>
        <description>Send document via DocuSign</description>
        <label>DocuSign</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__Email_DocConfig</fullName>
        <active>true</active>
        <description>This actionable should be used when the DocConfig is of type EMAIL. This action will send out the resulting email.</description>
        <label>Email DocConfig</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__Email_DocConfig_for_Quick_Action</fullName>
        <active>true</active>
        <description>This actionable should be used when the DocConfig is of type EMAIL. This action will open the Email Activity and prefill this with the Actionable data.</description>
        <label>Email DocConfig for Quick Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__Run_Class</fullName>
        <active>true</active>
        <description>Run a class that is inherits AbstractAfterActionable or AbstractBeforeActionable</description>
        <label>Run Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__Run_Lightning_Flow</fullName>
        <active>true</active>
        <description>Run a Lightning Flow with your custom logic</description>
        <label>Run Lightning Flow</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>